@@ -1,5 +1,8 @@
 2009-09-22  Ulrich Mueller  <ulm@gentoo.org>
 
+	* gentoo-syntax.el (ebuild-mode-licenses): Don't supply a default
+	list if licences can't be read from the Portage tree.
+
 	* Version 1.13 released.
 
 2009-09-22  Christian Faulhammer  <fauli@gentoo.org>
